Opened 16 years ago
Closed 13 years ago
#3331 closed bug (fixed)
[Appearance Preflet] Defaults button doesn't work
Reported by: | Adek336 | Owned by: | darkwyrm |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Appearance | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
At least in the antialiasing tab, after changing preferences, the Defaults button pressed does nothing and gets permanently greyed out so you can't even click it again.
Attachments (1)
Change History (2)
by , 16 years ago
Attachment: | img_1741.jpg added |
---|
comment:1 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev43251.