Fix for Defaults button issues in Appearance preflet

* Implement isDefaultable() and SetDefaults() for Antialiasing tab;
* The default color set was out of sync with the actual colors,
  it now gets the actual colors rather than hardcoding them;
* Some hardcoded values for defaults related to antialiasing were
  differents from actual default values stated in AppServer;
* Revert now works for Antialiasing settings also.

Fix #3331